<resources>
    <string name="app_name">drawnav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="create_account">Create a new account !</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="greeting">Silahkan login untuk memakai aplikasi</string>
    <string name="img_logo">Logo</string>
    <string name="string_login">Login</string>
    <string name="menu_developer">Developer</string>
</resources>